# iop-json-connector

./: .gitignore  README.md
fkie_iop_json_connector/: CMakeLists.txt  package.xml  setup.py
fkie_iop_json_connector/fkie_iop_json_connector/: __init__.py  address_book.py  jaus_address.py  logger.py  message.py  message_parser.py  message_reassembler.py  message_serializer.py  queue.py  server.py
fkie_iop_json_connector/fkie_iop_json_connector/schemes/: AddNoGoZone.json  AddNoGoZoneResponse.json  AddNoGoZoneResponse_d744.json  AddNoGoZone_d740.json  CBDetailedMeasurement_f932.json  CBRN4_f930.json  CBRNCommand_f927.json  CBRNConfigurationCommand_f928.json  CBRNConfigurationState_f935.json  CBRNDetection_f931.json  CBRNDisplayConfigurationCommand_f929.json  CBRNOperatingState_f934.json  CBRNScanWindowConfigurationCommand_f92a.json  CBRNScanWindowOperatingState_f936.json  CancelEvent.json  CancelEvent_01f2.json  ClearEmergency.json  ClearEmergency_0007.json  CommandEvent.json  CommandEvent_41f6.json  ConfirmControl.json  ConfirmControl_000f.json  ConfirmDigitalResourceEndpoint.json  ConfirmDigitalResourceEndpoint_f703.json  ConfirmElementRequest.json  ConfirmElementRequest_041c.json  ConfirmEventRequest.json  ConfirmEventRequest_01f3.json  ConfirmHandoffRequest.json  ConfirmHandoffRequest_ff35.json  ConfirmPlatformStateRequest.json  ConfirmPlatformStateRequest_ff27.json  ConfirmReleaseControl.json  ConfirmReleaseControl_ff39.json  ConfirmSensorConfiguration.json  ConfirmSensorConfiguration_0801.json  ControlDigitalVideoSensorStream.json  ControlDigitalVideoSensorStream_0805.json  CreateCommandEvent.json  CreateCommandEvent_01f6.json  (+572 more)
fkie_iop_json_connector/fkie_iop_json_connector/transport/: net.py  udp_uc.py
fkie_iop_json_connector/scripts/: iop-json-connector.py  ros-iop-json-connector.py
fkie_iop_json_connector/test/: test_pack.py  websocket.html
